2009-10-15  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7295738> No way to mute/unmute a movie in full screen video mode

        * WebView/WebVideoFullscreenHUDWindowController.mm:
        (-[WebVideoFullscreenHUDWindowController setVolume:]): Unmute movie before changing volume.

2009-10-14  Kevin Decker  <kdecker@apple.com>

        Unbreak the world.
        
        * Plugins/WebBaseNetscapePluginView.mm:
        (WebHaltablePlugin::restart):

2009-10-14  Kevin Decker  <kdecker@apple.com>

        Reviewed by Anders Carlsson and Jon Honeycutt

        <rdar://problem/7304295> snapshots of halted plug-ins are missing
        
        * Plugins/WebBaseNetscapePluginView.mm: Move bodies of WebHaltablePlugin virtual functions from WebHaltablePlugin class definition.
        (WebHaltablePlugin::halt): Provide a substitute image to the RenderWidget for the plug-in view.
        (WebHaltablePlugin::restart): Clear the substitute image.

2009-10-13  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Adam Roben.

        Change the order of arguments on some methods.  Split removal for user stylesheets and script into
        separate functions based off the type of object being removed.

        * WebView/WebView.mm:
        (+[WebView _addUserScriptToGroup:worldID:source:url:whitelist:blacklist:injectionTime:]):
        (+[WebView _addUserStyleSheetToGroup:worldID:source:url:whitelist:blacklist:]):
        (+[WebView _removeUserScriptFromGroup:worldID:url:]):
        (+[WebView _removeUserStyleSheetFromGroup:worldID:url:]):
        (+[WebView _removeUserScriptsFromGroup:worldID:]):
        (+[WebView _removeUserStyleSheetsFromGroup:worldID:]):
        * WebView/WebViewPrivate.h:

2009-10-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/6660507> Add "privacy mode" to Netscape Plug-in API
